[project]
name = "arona-helper-backend"
dynamic = ["version"]
description = "Arona Helper Backend"
authors = [{ name = "FalfaChino", email = "falfachino@qq.com" }]
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "cookit[all]>=0.4.1",
    "sqlacodegen>=2.3.0",
    "pymysql>=1.1.1",
    "uvicorn>=0.29.0",
    "redis[hiredis]>=5.0.4",
    "pyjwt>=2.8.0",
]
requires-python = ">3.10,<4.0"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.version]
source = "file"
path = "arona_helper_backend/__main__.py"

[tool.pdm.scripts]
server.cmd = "python app.py"

[tool.basedpyright]
pythonVersion = "3.10"
defineConstant = { PYDANTIC_V2 = true }
typeCheckingMode = "standard"
reportShadowedImports = false
exclude = ["**/node_modules", "**/.venv"]

[tool.ruff]
extend-exclude = []

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
preview = true
ignore = [
    "B008",
    "B905",
    # "COM812",
    "E501",
    "FBT001",
    "FBT002",
    "ISC001",
    "PERF203",
    "PGH003",
    "PLC04",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF006",
    "RUF029",
    "RUF100",
    "S101",
    "S311",
    "S404",
    "SIM117",
    "TRY002",
    "TRY003",
]
select = [
    "A",
    "ANN001",
    "ARG",
    "ASYNC",
    "B",
    "C4",
    "COM",
    "DTZ",
    "E",
    "F",
    "FBT",
    "FLY",
    "FURB",
    "I",
    "ISC",
    "N",
    "NPY",
    "PERF",
    "PIE",
    "PGH",
    # "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "TCH",
    "TRY",
    "YTT",
]

[tool.ruff.lint.per-file-ignores]

[tool.ruff.lint.isort]
combine-as-imports = true
detect-same-package = true
extra-standard-library = ["typing_extensions"]
split-on-trailing-comma = true
